Add automatic screenshot creation

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,7 @@ Carthage/Build
 
 fastlane/report.xml
 fastlane/Preview.html
-fastlane/screenshots
+fastlane/screenshots/**/*.png
 fastlane/test_output
+fastlane/README.md
+fastlane/report.xml
