--- a/Timeu.xcodeproj/xcshareddata/xcschemes/TimeuUITests.xcscheme
+++ b/Timeu.xcodeproj/xcshareddata/xcschemes/TimeuUITests.xcscheme
@@ -9,14 +9,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "FDD678651F7D9051002F4D33"
-               BuildableName = "Timeu.app"
-               BlueprintName = "Timeu"
+               BlueprintIdentifier = "FD8D548120853DCC004F1C85"
+               BuildableName = "TimeuUITests.xctest"
+               BlueprintName = "TimeuUITests"
                ReferencedContainer = "container:Timeu.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -55,6 +55,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -71,13 +72,6 @@
             ReferencedContainer = "container:Timeu.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -87,16 +81,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "FDD678651F7D9051002F4D33"
-            BuildableName = "Timeu.app"
-            BlueprintName = "Timeu"
-            ReferencedContainer = "container:Timeu.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
