Ignore screenshot.html

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Carthage/Build
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
+fastlane/screenshots/screenshots.html
 fastlane/test_output
 fastlane/README.md
 fastlane/report.xml
